Improve support for WP disambiguation pages, and report them as errors to server

--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -3919,6 +3919,7 @@ ol.link-bibliography-list-compact > li::before {
     margin: 0 0 1em 1em;
     overflow: auto;
     position: relative;
+    z-index: 1;
 }
 .annotation.wikipedia-entry .side-box.sister-box ul {
     padding: 0;
