Slightly change punctuation in include template

--- a/template/include/annotation-blockquote-inside.tmpl
+++ b/template/include/annotation-blockquote-inside.tmpl
@@ -10,7 +10,7 @@
 			   ><{fullTitleHTML}></a>\
 		<[IF secondaryTitleLinksHTML]><span class="secondary-title-links"><{secondaryTitleLinksHTML}></span><[IFEND]>\
 		<[IF abstract & !authorDateAux ]>:<[IFEND]>\
-		<[IF authorDateAux]><[IF2 author | date]>,\ <[IF2END]><{authorDateAux}><[IF2 abstract]>:<[IF2END]><[IFEND]>
+		<[IF authorDateAux]><[IF2 author]>,\ <[IF2END]><{authorDateAux}><[IF2 abstract]>:<[IF2END]><[IFEND]>
 	</p>
 	<[IF abstract]>
 	<blockquote class="data-field annotation-abstract"><{abstract}></blockquote>
