--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2322,18 +2322,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1707003341#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1707003341#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1707003341#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1707003341#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5220,14 +5220,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1707003341#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1707003341#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5368,7 +5368,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1707003341#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5828,14 +5828,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1707003341#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1707003341#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6385,10 +6385,10 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
     --SA-image-focus-overlay-image-caption-separator-color: #888;
     --SA-image-focus-overlay-help-box-background-color: rgba(0, 0, 0, 0.85);
     --SA-image-focus-overlay-help-box-text-color: #fff;
-    --SA-image-focus-overlay-info-icon-color: #000;
-    --SA-image-focus-overlay-info-icon-drop-shadow-color: #fff;
-    --SA-image-focus-overlay-image-number-text-color: #000;
-    --SA-image-focus-overlay-image-number-text-shadow-color: #fff;
+    --SA-image-focus-overlay-info-icon-drop-shadow-color: #000;
+    --SA-image-focus-overlay-image-number-text-color: #fff;
+    --SA-image-focus-overlay-image-number-text-shadow-color: #000;
+    --SA-image-focus-overlay-image-url-copy-icon-color: #bbb;
     --SA-image-focus-overlay-slideshow-button-color: #ddd;
     --SA-image-focus-overlay-slideshow-button-hover-background-color: rgba(0, 0, 0, 0.1);
     --SA-image-focus-overlay-slideshow-button-hover-color: #777;
@@ -6499,7 +6499,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .caption {
     position: absolute;
-    bottom: 0.75em;
+    bottom: 0.25em;
     left: 4.5em;
     right: 4.5em;
     margin: auto;
@@ -6549,7 +6549,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .caption .caption-text-wrapper {
     background-color: var(--SA-image-focus-overlay-image-caption-background-color);
-    padding: 0.25em 1.25em;
+    padding: 0.125em 1.25em 1px 1.25em;
     border-radius: 8px;
 }
 @media (max-width:  649px) and (orientation: portrait),
@@ -6567,7 +6567,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
  */
 
 #image-focus-overlay .caption p {
-    margin: 0.75em 0;
+    margin: 0.875em 0;
     color: var(--SA-image-focus-overlay-image-caption-text-color);
 }
 #image-focus-overlay .caption p + p {
@@ -6606,14 +6606,22 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .caption .image-url {
     position: relative;
-    margin: 0.5em 0 0 0;
-    padding: 0.5em 1.25em 0.75em 1.25em;
+    margin: 0;
+    padding: 0.625em 1.25em 0.875em 1.25em;
     border-radius: 8px;
     background-color: var(--SA-image-focus-overlay-image-caption-background-color);
     cursor: copy;
     user-select: none;
     transition:
         background-color 0.15s ease-out;
+}
+#image-focus-overlay .caption .image-url::before {
+	content: "";
+	position: absolute;
+	top: -1px;
+	left: 1.25em;
+	right: 1.25em;
+	border-top: 1px dotted var(--SA-image-focus-overlay-image-caption-separator-color);
 }
 @media (max-width:  649px) and (orientation: portrait),
        (max-height: 649px) and (orientation: landscape) {
@@ -6651,8 +6659,8 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
     position: absolute;
     width: 0.95em;
     height: 0.95em;
-    right: 0.2em;
-    top: 0.25em;
+    right: 0.55em;
+    top: 0.9em;
     pointer-events: none;
     overflow: hidden;
 }
@@ -6663,7 +6671,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
     top: 0;
     left: 0;
     height: 100%;
-    color: var(--SA-image-focus-overlay-image-caption-separator-color);
+    color: var(--SA-image-focus-overlay-image-url-copy-icon-color);
     transition:
         opacity 2s ease-in;
 }
@@ -6736,7 +6744,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#question');
+    background-image: url('/static/img/icon/icons.svg?v=1707003341#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -6745,8 +6753,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
     right: 0;
     bottom: 0;
     padding: 10px;
-    color: var(--SA-image-focus-overlay-info-icon-color);
-    filter: drop-shadow(0 0 6px var(--SA-image-focus-overlay-info-icon-drop-shadow-color));
+    filter: invert(1) drop-shadow(0 0 4px var(--SA-image-focus-overlay-info-icon-drop-shadow-color));
     visibility: visible;
     opacity: 0.85;
     transition:
@@ -6801,10 +6808,10 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
     font-weight: 600;
     color: var(--SA-image-focus-overlay-image-number-text-color);
     text-shadow:
-        0 0  3px var(--SA-image-focus-overlay-image-number-text-shadow-color),
-        0 0  5px var(--SA-image-focus-overlay-image-number-text-shadow-color),
-        0 0  8px var(--SA-image-focus-overlay-image-number-text-shadow-color),
-        0 0 13px var(--SA-image-focus-overlay-image-number-text-shadow-color);
+        0 0  2px var(--SA-image-focus-overlay-image-number-text-shadow-color),
+        0 0  4px var(--SA-image-focus-overlay-image-number-text-shadow-color),
+        0 0  6px var(--SA-image-focus-overlay-image-number-text-shadow-color),
+        0 0 10px var(--SA-image-focus-overlay-image-number-text-shadow-color);
     width: 1.5em;
     text-align: right;
     white-space: nowrap;
@@ -7297,7 +7304,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1705740373#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1707003341#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7372,7 +7379,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 
 .markdownBody span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1707003341#hand-point-right-regular');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
