--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -4951,6 +4951,10 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     padding: 5px;
 }
 
+.popup button.extracts-disable-button {
+	padding: 3px;
+}
+
 .popup.mini-title-bar button.zoom-button,
 .popup.mini-title-bar button.extracts-disable-button {
     display: none;
