--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2322,18 +2322,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1707003341#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1707102068#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1707003341#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1707102068#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1707003341#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1707102068#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1707003341#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1707102068#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -4951,6 +4951,10 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     padding: 5px;
 }
 
+.popup button.extracts-disable-button {
+	padding: 3px;
+}
+
 .popup.mini-title-bar button.zoom-button,
 .popup.mini-title-bar button.extracts-disable-button {
     display: none;
@@ -5220,14 +5224,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1707003341#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1707102068#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1707003341#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1707102068#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5368,7 +5372,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1707003341#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1707102068#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5828,14 +5832,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1707003341#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1707102068#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1707003341#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1707102068#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6746,7 +6750,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1707003341#question');
+    background-image: url('/static/img/icon/icons.svg?v=1707102068#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7306,7 +7310,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1707003341#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1707102068#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7381,7 +7385,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 
 .markdownBody span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1707003341#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1707102068#hand-point-right-regular');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
