Increase UI emphasis for popups-disable functionality

--- a/css/colors-dark-GENERATED.css
+++ b/css/colors-dark-GENERATED.css
@@ -285,6 +285,7 @@
 	--GW-page-toolbar-button-selected-icon-color: #a6a6a6;
     --GW-page-toolbar-button-text-color: #b4b4b4;
     --GW-page-toolbar-button-disabled-text-color: #5c5c5c;
+    --GW-page-toolbar-button-highlighted-text-color: #fff;
 
 	/*	Reader mode.
 	 */
