--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -286,6 +286,7 @@
 	--GW-page-toolbar-button-selected-icon-color: #777;
     --GW-page-toolbar-button-text-color: #666;
     --GW-page-toolbar-button-disabled-text-color: #ccc;
+    --GW-page-toolbar-button-highlighted-text-color: #000;
 
 	/*	Reader mode.
 	 */
@@ -621,6 +622,7 @@
 	--GW-page-toolbar-button-selected-icon-color: #a6a6a6;
     --GW-page-toolbar-button-text-color: #b4b4b4;
     --GW-page-toolbar-button-disabled-text-color: #5c5c5c;
+    --GW-page-toolbar-button-highlighted-text-color: #fff;
 
 	/*	Reader mode.
 	 */
@@ -918,6 +920,6 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 	background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1707102070">
-<script src="/static/js/head.js?v=1707102069"></script>
+<link rel="stylesheet" href="/static/css/head.css?v=1707103371">
+<script src="/static/js/head.js?v=1707103370"></script>
 <link rel="preload" href="/static/img/icon/icons.svg?v=1707102068" as="image">
