--- a/include/inlined-standalone.html
+++ b/include/inlined-standalone.html
@@ -286,6 +286,7 @@
 	--GW-page-toolbar-button-selected-icon-color: #777;
     --GW-page-toolbar-button-text-color: #666;
     --GW-page-toolbar-button-disabled-text-color: #ccc;
+    --GW-page-toolbar-button-highlighted-text-color: #000;
 
 	/*	Reader mode.
 	 */
@@ -333,5 +334,5 @@
 	--GW-checkerboard-scrollbar-hover-background-image: var(--GW-image-checkerboard-000-fff-2x-gif);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1707102420">
-<link rel="stylesheet" href="/static/css/style.css?v=1707102420">
+<link rel="stylesheet" href="/static/css/head.css?v=1707103371">
+<link rel="stylesheet" href="/static/css/style.css?v=1707103371">
