backlinks: add per-page disabling of backlink contribution (removes some more gwern.net-only configuration hardwiring & adds flexibility)

--- a/404.page
+++ b/404.page
@@ -11,6 +11,7 @@ importance: 0
 cssExtension: dropcaps-de-zs
 index: true
 error404: true
+backlink: False
 ...
 
 ![You went too far.](/static/img/logo/logo-unifrakturmaguntia-lowercase-h.svg "Image of blackletter lowercase letter ‘H’, alluding to the ‘G’ Fraktur logo of Gwern.net, humorously implying that the reader who has triggered a 404 Not Found error went too far past the ‘G’."){.float-right .outline-not width="452" height="452"}
