--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -89,6 +89,10 @@
     --GW-figure-outline-color: #888;
     --GW-figure-caption-outline-color: #888;
 
+	/*	Embeds.
+	 */
+	--GW-embed-border-color: #ddd;
+
     /*  Epigraphs.
      */
     --GW-epigraph-quotation-mark-color: #808080;
@@ -424,6 +428,10 @@
      */
     --GW-figure-outline-color: #999;
     --GW-figure-caption-outline-color: #999;
+
+	/*	Embeds.
+	 */
+	--GW-embed-border-color: #494949;
 
     /*  Epigraphs.
      */
@@ -920,6 +928,6 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 	background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1705884894">
-<script src="/static/js/head.js?v=1707682512"></script>
-<link rel="preload" href="/static/img/icon/icons.svg?v=1707144122" as="image">
+<link rel="stylesheet" href="/static/css/head.css?v=1707935106">
+<script src="/static/js/head.js?v=1707935106"></script>
+<link rel="preload" href="/static/img/icon/icons.svg?v=1707106059" as="image">
