--- a/include/inlined-standalone.html
+++ b/include/inlined-standalone.html
@@ -89,6 +89,10 @@
     --GW-figure-outline-color: #888;
     --GW-figure-caption-outline-color: #888;
 
+	/*	Embeds.
+	 */
+	--GW-embed-border-color: #ddd;
+
     /*  Epigraphs.
      */
     --GW-epigraph-quotation-mark-color: #808080;
@@ -334,5 +338,5 @@
 	--GW-checkerboard-scrollbar-hover-background-image: var(--GW-image-checkerboard-000-fff-2x-gif);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1707103371">
-<link rel="stylesheet" href="/static/css/style.css?v=1707103371">
+<link rel="stylesheet" href="/static/css/head.css?v=1707935106">
+<link rel="stylesheet" href="/static/css/style.css?v=1707935106">
