--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -1099,7 +1099,7 @@
 
     /*  Does not get inverted, so should not be in colors.css.
      */
-    --GW-popframes-iframe-background-color: #fff;
+    --GW-iframe-background-color: #fff;
 
     --GW-popups-popup-max-width: 640px;
     --GW-popups-popup-max-height: 480px;
@@ -2105,6 +2105,19 @@ img::before {
 }
 
 
+/**********/
+/* EMBEDS */
+/**********/
+
+iframe, object {
+	display: block;
+	width: calc(100% - 2px);
+	height: 100vh;
+	max-height: calc(100vh - 8rem);
+	border: 1px solid var(--GW-embed-border-color);
+}
+
+
 /**************/
 /* INTERVIEWS */
 /**************/
@@ -2322,18 +2335,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1707102068#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1707106059#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1707102068#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1707106059#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1707102068#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1707106059#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1707102068#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1707106059#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -4621,6 +4634,12 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     margin: auto;
 }
 
+.popframe-body.object iframe,
+.popframe-body.object object {
+    border: unset;
+    max-height: unset;
+}
+
 .popframe-body.object iframe {
     background-color: var(--GW-popframes-iframe-background-color);
 }
@@ -5152,7 +5171,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 }
 
 .popup-body.object.zoomed iframe,
-.popup-body.object.zoomed object ,
+.popup-body.object.zoomed object,
 .popup-body.object.resized iframe,
 .popup-body.object.resized object {
     width: 100%;
@@ -5224,14 +5243,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1707102068#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1707106059#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1707102068#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1707106059#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5372,7 +5391,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1707102068#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1707106059#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5832,14 +5851,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1707102068#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1707106059#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1707102068#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1707106059#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6756,7 +6775,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1707102068#question');
+    background-image: url('/static/img/icon/icons.svg?v=1707106059#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7316,7 +7335,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1707102068#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1707106059#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7391,7 +7410,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 
 .markdownBody span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1707102068#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1707106059#hand-point-right-regular');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
