Add template & data source support for file-embed data field in annotations

--- a/template/include/annotation-blockquote-inside.tmpl
+++ b/template/include/annotation-blockquote-inside.tmpl
@@ -15,4 +15,7 @@
 	<[IF abstract]>
 	<blockquote class="data-field annotation-abstract"><{abstract}></blockquote>
 	<[IFEND]>
+	<[IF fileIncludes]>
+	<div class="data-field file-includes"><{fileIncludes}></div>
+	<[IFEND]>
 </div>
