--- a/template/include/annotation-blockquote-outside.tmpl
+++ b/template/include/annotation-blockquote-outside.tmpl
@@ -16,4 +16,7 @@
 	<[IF abstract]>
 	<div class="data-field annotation-abstract"><{abstract}></div>
 	<[IFEND]>
+	<[IF fileIncludes]>
+	<div class="data-field file-includes"><{fileIncludes}></div>
+	<[IFEND]>
 </blockquote>
