--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2125,6 +2125,13 @@ iframe {
 	}
 }
 
+iframe.youtube {
+	aspect-ratio: 495 / 310;
+}
+iframe.vimeo {
+	aspect-ratio: 495 / 278;
+}
+
 object {
 	aspect-ratio: 8.5 / 11;
 }
