Enable video click-to-play

--- a/css/default.css
+++ b/css/default.css
@@ -1048,6 +1048,10 @@ img::before {
 /* EMBEDS */
 /**********/
 
+video {
+	cursor: pointer;
+}
+
 iframe, object {
 	display: block;
 	width: calc(100% - 2px);
